<resources>
    <string name="app_name">happy</string>
    <string name="love">my love</string>
    <string name="name">liuyijia</string>
    <string name="inp">please input</string>
    <string name="change">change</string>
    <string name="txtout">result</string>
    <string name="one">+1point</string>
    <string name="two">+2points</string>
    <string name="three">+3points</string>
    <string name="reset">reset</string>
    <string name="rmb_hint">please input rmb</string>
    <string name="dollar">dollar</string>
    <string name="euro">euro</string>
    <string name="won">won</string>
    <string name="lable_open_list" translatable="false">OpenList</string>
    <string name="menu_set_lable" translatable="false">Settings</string>
    <string name="rdo_home_lable1" translatable="false">首页</string>
    <string name="rdo_func_lable1" translatable="false">功能</string>
    <string name="rdo_setting_lable1" translatable="false">设置</string>
</resources>
