<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RateActivity">

    <EditText
        android:id="@+id/rmb"
        android:gravity="center"
        android:hint="@string/rmb_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />
    <TextView
        android:id="@+id/show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="@string/change"
        android:gravity="center"/>
    <Button
        android:id="@+id/btn_dollar"
        android:text="@string/dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/btn_euro"
        android:text="@string/euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/btn_won"
        android:text="@string/won"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="other play"
        android:onClick="openOne"/>

</LinearLayout>